--- a/src/components/SearchLocations/SearchLocation.module.css
+++ b/src/components/SearchLocations/SearchLocation.module.css
@@ -10,7 +10,7 @@
 .weather-container {
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .weather {
