--- a/src/components/TravelSuggestions/TravelSuggestions.module.css
+++ b/src/components/TravelSuggestions/TravelSuggestions.module.css
@@ -1,10 +1,19 @@
+.header {
+    width: 600px;
+    display: inline-block;
+}
+
+.header p {
+    padding: 0 50px;
+}
+
 .section {
     display: inline-block;
     width: 600px;
 }
 
 .section p {
-    padding: 0 50px;
+    font-style: italic;
 }
 
 .list-section {
