Updated logic and interface

--- a/src/components/TravelSuggestions/TravelSuggestions.module.css
+++ b/src/components/TravelSuggestions/TravelSuggestions.module.css
@@ -7,6 +7,24 @@
     padding: 0 50px;
 }
 
+.sort {
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 10px;
+}
+
+.sort button {
+    border-width: 0;
+    padding: 5px 8px;
+    border-radius: 7px;
+}
+
+.sort button:active, .sort button:hover, .active {
+    background-color: rgb(9, 9, 218);
+    color: white;
+    transition: 0.1s ease-in;
+}
+
 .section p {
     font-style: italic;
 }
@@ -18,6 +36,6 @@
 .list-section ul {
     list-style: none;
     padding-left: 0;
-    height: calc(100vh - 230px);
+    height: calc(100vh - 265px);
     overflow: auto;
 }
