--- a/src/components/TravelSuggestions/TravelSuggestion.module.css
+++ b/src/components/TravelSuggestions/TravelSuggestion.module.css
@@ -14,6 +14,24 @@
     margin-top: 6px;
 }
 
+.description {
+    height: auto;
+    font-style: italic;
+    margin-bottom: 10px;
+    padding: 3px 3px;
+    border-radius: 7px;
+    cursor: pointer;
+}
+
+.collapsed {
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    overflow-wrap: break-word;
+}
+
 .forecast span {
     display: block;
     font-weight: 500;
