Final updates on interface/logic

--- a/src/components/SearchLocations/SearchLocation.module.css
+++ b/src/components/SearchLocations/SearchLocation.module.css
@@ -1,5 +1,11 @@
 .container {
     border-bottom: 1px solid gray;
+    border-radius: 5px;
+}
+
+.container:hover {
+    background-color: rgba(123, 123, 123, 0.3);
+    cursor: pointer;
 }
 
 .place {
